fixed a bug in already guessed sockets which caused players to cannot guess

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <noscript>
+    <style type="text/css">
+      body {display:none;}
+    </style>
+    <div>
+      You don't have javascript enabled.  Please enable javascript to use this site.
+    </div>
+  </noscript>
 </head>
 <body>
   <app-root></app-root>
