fixed imports and arranged entries

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,14 +11,16 @@
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <noscript>
     <style type="text/css">
-      body {display:none;}
+      body {
+        display: none;
+      }
     </style>
     <div>
-      You don't have javascript enabled.  Please enable javascript to use this site.
+      You don't have javascript enabled. Please enable javascript to use this site.
     </div>
   </noscript>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
